# my-cmake-template

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  main.md
include/my-cmake-template/: lib.hpp  version.h.in
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  main.cpp
